fixed code bug on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -181,6 +181,7 @@ ul+pre {
 }
 
 :not(pre)>code {
+    word-break: break-all;
     background-color: var(--color-light-secondary);
     padding: 0.25rem 0.5rem;
     margin: 2px;
